--- a/css/theme.scss
+++ b/css/theme.scss
@@ -82,7 +82,7 @@ div.row.links {
             -webkit-transition: 300ms;
             -moz-transition: 300ms;
             transition: 300ms;
-            background-color: #fca301;
+            background-color: #289ae3;
         }
 
         > i {
