--- a/css/theme.scss
+++ b/css/theme.scss
@@ -5,7 +5,7 @@
 $fc-footer-height: 44px;
 
 html, body {
-    font-family: 'Open Sans',Arial,Helvetica,sans-serif;
+    font-family: "Open Sans", sans-serif;
 }
 html {
     position: relative;
